--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   supabase_flutter: ^1.4.0
   email_validator: ^2.0.1
   font_awesome_flutter: ^10.0.0
+  device_preview: ^1.1.0
+  wc_form_validators: ^1.0.0
 
 dev_dependencies:
   flutter_test:
