--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^10.0.0
   device_preview: ^1.1.0
   wc_form_validators: ^1.0.0
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
