--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,20 @@ homepage: https://supabase.com
 repository: 'https://github.com/supabase-community/flutter-auth-ui'
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
   flutter: '>=3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^1.4.0
+  supabase_flutter: ^2.6.0
   email_validator: ^2.0.1
   font_awesome_flutter: ^10.0.0
   device_preview: ^1.1.0
   wc_form_validators: ^1.0.0
   mask_text_input_formatter: ^2.4.0
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.1
 
 dev_dependencies:
   flutter_test:
